# snake

./: .gitignore  README.md
code/: README.md
code/fastapi_snake_app/: .gitignore  Dockerfile  README.md  pylintrc  pyproject.toml
code/fastapi_snake_app/fastapi_snake_app/: chatter.py  game.html  game.py  login.py  logout.py  main.py  make_review.py  note.py  play.py  register.py  review.py  stage.py  update.py  user.py  ws.py
code/fastapi_snake_app/fastapi_snake_app/db/: __init__.py  db.sqlite  note.py  play.py  review.py  stage.py  user.py
code/vue-snake-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
code/vue-snake-app/src/: App.vue  main.ts
code/vue-snake-app/src/@types/: game.d.ts  utils.d.ts
doc/: README.md
doc/prototype-design/: 休闲模式.html  商城.html  对战.html  排位赛.html  论坛.html
doc/prototype-design/data/: document.js  styles.css
fastapi_snake_app/: README.md  pylintrc
fastapi_snake_app/fastapi_snake_app/: game.py
prototype-design/: 个人中心.html  主页.html  注册.html  登录.html  设置.html
prototype-design/files/主页/: styles.css
prototype-design/files/休闲模式/: data.js  styles.css
prototype-design/files/商城/: styles.css
prototype-design/files/对战/: styles.css
prototype-design/files/注册/: data.js  styles.css
prototype-design/files/登录/: styles.css
prototype-design/files/论坛/: data.js
prototype-design/files/设置/: data.js  styles.css
vue-snake-app/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  vite.config.ts
vue-snake-app/src/: App.vue  main.ts
vue-snake-app/src/utils/: request.ts
(+82 files in other folders)
